--- a/recruiter-server/views/companies.ejs
+++ b/recruiter-server/views/companies.ejs
@@ -11,6 +11,17 @@
     </script>
 <% } %>
 
+<% if (errorMessage) { %>
+    <div id="errorToast" class="fixed top-5 right-5 bg-red-500 text-white p-3 rounded-md shadow-md mt-20">
+        <%= errorMessage %>
+    </div>
+    <script>
+        setTimeout(() => {
+            document.getElementById("errorToast").style.display = "none";
+        }, 3000);
+    </script>
+<% } %>
+
 <h2 class="font-bold mt-10 flex justify-center font-sans text-xl">Here is your list of recently added Companies</h2>
 
 <section class="my-10 flex justify-center mb-36">
